@@ -1,3 +1,7 @@
+2006-11-02 00:31  antirez
+
+	* AUTHORS, ChangeLog: Minor doc typo
+
 2006-11-01 18:18  antirez
 
 	* ChangeLog, jim.c: Minor change to (hopefully) avoid a warning
